Fix link default horizontal align

--- a/src/components/link/link.less
+++ b/src/components/link/link.less
@@ -3,6 +3,7 @@
   display: inline-flex;
   align-items: center;
   align-content: center;
+  justify-content: center;
   position: relative;
   box-sizing: border-box;
   transform: translate3d(0, 0, 0);
